Fixed index search so it used a Promise.all, renamed layout and index to prevent conflicts.

--- a/views/search.html
+++ b/views/search.html
@@ -4,7 +4,7 @@
   <h3>Search</h3>
   <hr>
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-lg-4 form-group">
       <label for="hotels">Hotels</label>
       <select class="form-control" name="hotels">
       {% for hotel in hotels %}
