--- a/views/layout2.html
+++ b/views/layout2.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>{% block title %}WikiStack{% endblock %}</title>
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/stylesheets/style.css" rel="stylesheet">
   </head>
   <body>
@@ -20,9 +20,7 @@
         </div>
         <div id="nav-items" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/wiki/">index</a></li>
-            <li><a href="/wiki/add">write</a></li>
-            <li><a href="/users">users</a></li>
+            <li><a href="/">index</a></li>
           </ul>
         </div>
       </div>
@@ -32,9 +30,9 @@
     </div>
     <hr/>
     <div id="footer" class="container text-muted">
-      Trip Planner by JD
+      Trip Planner by D - J
     </div>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
