--- a/views/layout.html
+++ b/views/layout.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
 
     <!-- Bootstrap core CSS -->
-    <link href="../assets/stylesheets/style.scss" rel="stylesheet">
+    <link href="/stylesheets/style.css" rel="stylesheet">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
