Added class and instance methods for each model. Added map init file separately. Removed node-sass-middleware and added node-sass scripts back because they work now.

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-  margin-top: 50px;
+  padding-top: 50px;
 }
 
 #map-canvas {
@@ -122,4 +122,8 @@ body {
 	background:brown;
 	border:none;
 	vertical-align: middle;
+}
+
+.form-control {
+  border-radius: 0px;
 }
