--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,7 @@ html, body {
   height: 100%; }
 
 body {
-  margin-top: 50px; }
+  padding-top: 50px; }
 
 #map-canvas {
   width: 65%;
@@ -106,3 +106,6 @@ body {
   background: brown;
   border: none;
   vertical-align: middle; }
+
+.form-control {
+  border-radius: 0px; }
