--- a/views/layout2.html
+++ b/views/layout2.html
@@ -2,29 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{% block title %}WikiStack{% endblock %}</title>
+    <title>{% block title %}Trip Planner{% endblock %}</title>
     <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/stylesheets/style.css" rel="stylesheet">
   </head>
   <body>
-    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-items">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/wiki">Trip Planner</a>
-        </div>
-        <div id="nav-items" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">index</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    {% include 'navbar.html' %}
+
     <div class="container content">
       {% block content %}{% endblock %}
     </div>
@@ -32,7 +16,11 @@
     <div id="footer" class="container text-muted">
       Trip Planner by D - J
     </div>
+
+
     <script src="/jquery/dist/jquery.min.js"></script>
     <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCaI8oHm6wF4mZPFjGyK1rCjA3AInHCChg"></script>
+    <script src="/js/init_map.js"></script>
   </body>
 </html>
