--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -6,120 +6,125 @@ html, body {
 }
 
 body {
-  margin-top: 50px;
+  padding-top: 50px;
+}
+
+.navbar {
+	background-color: #192231;
+}
+
+.navbar a {
+	color: #CDCDCD;
 }
 
 #map-canvas {
-	width: 65%;
-	float:left;
+	width: 100%;
 	height: 100%;
-	position: relative;
+	border-right: thick solid #192231;
+	z-index:-1;
+	position:absolute;
 }
 
-#menubar {
-	background-color: red;
+.posNeeded {
+	position:absolute;
 	height: 100%;
-}
-
-.panel {
-	margin-top: 10%;
-	width: 80%;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#bottomPanel {
-	margin-top:0;
-}
-
-#dateShower {
-	margin-bottom: 3%;
+	right: 0;
 	width: 30%;
-	margin-left: auto;
-	margin-right: auto;
-	border: solid thin black;
-	display: block;
 }
 
-#dateShower .panel-body{
-	padding:1%;
+.menubar {
+	padding-top: 1%;
+	height: 100%;
+	background-color: transparent;
+	width:12%;
+	float:left;
+}
+
+.david {
+	height: 100%;
+	background-color: white;
+	width:88%;
+	position:absolute;
+	right:0;
+	margin-left:auto;
+	margin-right:auto;
+	border-left: solid thick black;
+	overflow: scroll;
+}
+
+.customButton {
+	border-radius: 50%;
+	border: solid thick white;
+	width:90%;
+	height:6%;
+	margin-top: 20%;
+	margin-right: 5%;
+}
+
+.day-data {
+	margin-top: 5%;
+	margin-left:10%;
+	margin-right:10%;
+}
+
+.day-to-day {
+	margin-left:5%;
+	margin-right:10%;
+	color: black;
+	font-weight: bold;
+}
+
+.weather {
+	margin-left:10%;
+	margin-right:10%;
+	width: 80%;
 	text-align: center;
-	float:left;
-	display: inline-block;
+	color: black;
+	font-weight: bold;
+	font-size: 500%;
 }
 
-.lookupHeader {
-	margin: 2%;
-	width: 70%;
+.day-list {
+	margin-left:2%;
+	margin-right:10%;
+	color: black;
+	list-style: none;
+	font-weight: none;	
 }
 
-.dropped {
-	float:left;
-	display: inline-block;
+.day-header {
+	margin-top: 10%;
+	color: black;
+	font-size: 300%;
+	margin-left:30%;
+	margin-right:30%;
+	width:40%;
+	text-align: center;
 }
 
-.plusBtn {
-	width:20px;
-	height:20px;
-	border-radius:50%;
-	font-size:10px;
-	color:white;
-	line-height:10px;
-	text-align:center;
-	background:teal;
-	border:none;
-	vertical-align: middle;
+.day-button {
+	margin-left:10%;
+	margin-right:10%;
+	width: 80%;
+	border: none;
+	border-bottom: thick black solid;
+	background-color: transparent;
+	margin-top: 5%;
+	color: black;
+	text-align: left;
+	font-size:150%;
 }
 
-.redBtn {
-	width:15px;
-	height:15px;
-	border-radius:50%;
-	font-size:7px;
-	color:white;
-	line-height:7px;
-	text-align:center;
-	background:red;
-	border:none;
-	margin-left: 5%;
+.cbp-spmenu-right {
+	right: 0;
 }
 
-.redBtnOne {
-	width:15px;
-	height:15px;
-	border-radius:50%;
-	font-size:7px;
-	color:white;
-	line-height:7px;
-	text-align:center;
-	background:red;
-	border:none;
-	vertical-align: 50%;
-	margin-left: 5%;
+.cbp-spmenu-right.cbp-spmenu-open {
+	right: -26.5%;
 }
 
-.lookupHeaderr {
-	margin: 2%;
-	width: 70%;
-	display: inline-block;
-	float:left;
-	font-size: 12px;
-}
-
-#dateSelector {
-	margin-bottom: 0;
-	padding: 2%;
-}
-
-.dateBtn {
-	width:30px;
-	height:30px;
-	border-radius:50%;
-	font-size:15px;
-	color:white;
-	line-height:15px;
-	text-align:center;
-	background:brown;
-	border:none;
-	vertical-align: middle;
+.cbp-spmenu {
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	transition: all 0.3s ease;
 }
