--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,7 +1,22 @@
 /*index css*/
 
+/* $main_color: #1A2930; */
+$main_color: #CF6766;
+$second_color: #30415D;
+$third_color: #031424;
+$fourth_color: #8EAEBD;
+$map_width: 75%;
+
+* {
+  font-family: 'Raleway', 'Helvetica', san-serif;
+}
+
 html, body {
-	width: 100%;
+  width: 100%;
+  background-color: $third_color;
+}
+
+html, body, .container-fluid, .row, .map {
 	height: 100%;
 }
 
@@ -9,11 +24,20 @@ body {
   padding-top: 50px;
 }
 
+/* #map-canvas { */
+/*   width: $map_width; */
+/*   float:left; */
+/*   height: 100%; */
+/*   position: relative; */
+/* } */
+
 #map-canvas {
-	width: 65%;
-	float:left;
-	height: 100%;
-	position: relative;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  height: calc(100% - 0px);
+  border-right: 5px solid $fourth_color;
+  overflow-y: hidden;
 }
 
 #menubar {
@@ -124,6 +148,99 @@ body {
 	vertical-align: middle;
 }
 
-.form-control {
-  border-radius: 0px;
+.navbar {
+  background-color: $main_color;
+  border-bottom: 5px solid $fourth_color;
+
+  a, li > a {
+    color: #FFF;
+
+    &:hover {
+      background-color: darken($main_color, 10%);
+    }
+  }
+}
+
+.trip_planner {
+  overflow-y: auto;
+
+  h1 {
+    color: #FFF;
+  }
+}
+/*   width: 100% - $map_width; */
+/*   float: left; */
+/*   height: 100%; */
+/* } */
+
+.clearfix {
+  content: " ";
+  display: table;
+  clear: both;
+}
+
+.social {
+  text-align: center;
+
+  li {
+    display: inline-block;
+    margin: 0 5px;
+
+    a {
+      color: #FFF;
+      font-size: 42px;
+    }
+  }
+}
+
+.selected-title {
+  margin: 20px 0 10px 5%;
+}
+
+.selected {
+  margin: 0 auto;
+  padding: 20px 5%;
+  color: #fff;
+}
+
+.heading {
+  font-size: 120%;
+}
+
+.heading-small {
+  font-size: 110%;
+}
+
+.info-area {
+  padding: 15px;
+  color: #333;
+  background-color: #f5f5f5;
+  p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+}
+
+.info {
+  & + .info {
+    margin-top: 10px;
+  }
+
+  p {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+}
+
+.panel {
+  margin-top: 20px;
+  width: 90%;
+}
+
+.yellow {
+  color: #f1c40f;
+}
+
+.green {
+  color: #2ecc71;
 }
