--- a/views/index2.html
+++ b/views/index2.html
@@ -2,21 +2,20 @@
 
 {% block content %}
 
-<div id="map-canvas"></div>
-
-<div class="row">
-  <div class="col-lg-7">
-  </div>
-
-  <div class="col-lg-5">
+<div class="trip_planner row">
+  <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
 
     <div class="panel panel-default">
+
+      <div class="panel-heading">
+        <h3 class="panel-title">Trip Planner</h3>
+      </div>
 
       <div class="panel-body">
 
         <div class="row">
 
-          <div class="col-lg-12">
+          <div class="col-lg-12 form-group">
             <form role="form" action="/addHotel" method="POST">
               <label for="hotels">Hotels</label>
               <div class="input-group">
@@ -28,7 +27,9 @@
                 </select>
 
                 <div class="input-group-btn">
-                  <button type="submit" class="btn btn-primary">+</button>
+                  <button type="submit" class="btn btn-success">
+                    <i class="fa fa-plus" aria-hidden="true"></i>
+                  </button>
                 </div>
 
               </div>
@@ -36,21 +37,45 @@
           </div>
 
           <div class="col-lg-12 form-group">
-            <label for="restaurants">Restaurants</label>
-            <select class='form-control' name="restaurantId">
-            {% for restaurant in restaurants %}
-              <option value="{{ restaurant.id }}">{{ restaurant.name }}</option>
-            {% endfor %}
-            </select>
+            <form role="form" action="/addRestaurant" method="POST">
+              <label for="restaurants">Restaurants</label>
+              <div class="input-group">
+
+                <select class='form-control' name="restaurantId">
+                {% for restaurant in restaurants %}
+                  <option value="{{ restaurant.id }}">{{ restaurant.name }}</option>
+                {% endfor %}
+                </select>
+
+                <div class="input-group-btn">
+                  <button type="submit" class="btn btn-success">
+                    <i class="fa fa-plus" aria-hidden="true"></i>
+                  </button>
+
+                </div>
+
+              </div>
+            </form>
           </div>
 
           <div class="col-lg-12 form-group">
-            <label for="activities">Activities</label>
-            <select class='form-control' name="activityId">
-            {% for activity in activities %}
-              <option value="{{ activity.id }}">{{ activity.name }}</option>
-            {% endfor %}
-            </select>
+            <form role="form" action="/addActivity" method="POST">
+              <label for="activities">Activities</label>
+              <div class="input-group">
+                <select class='form-control' name="activityId">
+                {% for activity in activities %}
+                  <option value="{{ activity.id }}">{{ activity.name }}</option>
+                {% endfor %}
+                </select>
+
+                <div class="input-group-btn">
+                  <button type="submit" class="btn btn-success">
+                    <i class="fa fa-plus" aria-hidden="true"></i>
+                  </button>
+                </div>
+
+              </div>
+            </form>
           </div>
 
         </div> <!-- end of row -->
@@ -59,28 +84,77 @@
 
     </div> <!-- end of panel -->
 
+  </div> <!-- end of col -->
+
+  <div class="col-lg-12 col-md-6 col-sm-6 col-xs-12">
     <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="btn-group">
+          <a href="#" class="btn btn-default">Day 1</a>
+          <a href="#" class="btn btn-default">Day 2</a>
+          <a href="#" class="btn btn-default">Day 3</a>
+        </div>
+      </div>
 
       <div class="panel-body">
 
         <div class="col-lg-12">
-          <h4>My Hotel</h4>
+          <h5>My Hotel</h5>
+          <ul class="list-unstyled">
+            <li>
+              <div class="input-group">
+                <input value="Andaz Wall Street" type="text" class="form-control"/>
+                <div class="input-group-btn">
+                  <button type="submit" class="btn btn-danger">
+                    <i class="fa fa-minus" aria-hidden="true"></i>
+                  </button>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
 
         <div class="col-lg-12">
-          <h4>My Restaurants</h4>
+          <h5>My Restaurants</h5>
+          <ul class="list-unstyled">
+            <li>No Restaurants Picked Yet</li>
+          </ul>
         </div>
 
         <div class="col-lg-12">
-          <h4>My Activities</h4>
+          <h5>My Activities</h5>
+          <ul class="list-unstyled">
+            <li>No Activities Planned Yet</li>
+          </ul>
         </div>
 
       </div> <!-- end of panel-body -->
 
     </div> <!-- end of panel -->
 
+  </div> <!-- end of col -->
+
+  <div class="col-sm-12">
+    <div class="social">
+      <ul class="list-unstyled">
+        <li>
+          <a href="#">
+            <i class="fa fa-facebook-official"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-twitter-square"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-google-plus-square"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
 
 </div>
-
 {% endblock %}
