--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,5 +1,5 @@
-<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-  <div class="container">
+<div class="navbar navbar-fixed-top" role="navigation">
+  <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-items">
         <span class="sr-only">Toggle navigation</span>
@@ -7,14 +7,57 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/wiki">Trip Planner</a>
+      <a class="navbar-brand" href="/">
+        <i class="fa fa-gitlab"></i>
+        Trip Planner
+      </a>
     </div>
+
     <div id="nav-items" class="collapse navbar-collapse">
+
       <ul class="nav navbar-nav">
-        <li><a href="/wiki/">Home</a></li>
-        <li><a href="/wiki/add">About</a></li>
-        <li><a href="/users">Contact</a></li>
+        <li>
+          <a href="/hotels">
+            <i class="fa fa-bed"></i>
+            Hotels
+          </a>
+        </li>
+
+        <li>
+          <a href="/restaurants">
+            <i class="fa fa-cutlery"></i>
+            Restaurants
+          </a>
+        </li>
+
+        <li>
+          <a href="/activities">
+            <i class="fa fa-beer"></i>
+            Activities
+          </a>
+        </li>
+
       </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">
+            <i class="fa fa-info-circle"></i>
+            About
+          </a>
+        </li>
+        <li><a href="#">
+            <i class="fa fa-envelope"></i>
+            Contact
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-lock"></i>
+            Login
+          </a>
+        </li>
+      </ul>
+
     </div>
   </div>
 </div>
